--- a/src/Component/Cart/Cart.css
+++ b/src/Component/Cart/Cart.css
@@ -1,3 +1,12 @@
 .product-price{
-    color: lightgreen;
+    color: rgb(60, 9, 245);
+}
+.taxVat{
+    color: chocolate;
+}
+.shipping{
+    color: darkolivegreen;
+}
+.totalPrice{
+    color: darkviolet;
 }
